--- a/courses/templates/courses/detail.html
+++ b/courses/templates/courses/detail.html
@@ -1,53 +1,20 @@
+{% extends "base.html" %}
+
+
 {% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Welcome to Python</title>
 
-    <!-- Bootstrap -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css'%}" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body class = "set-background-image">
-    <nav class="navbar navbar-default transparant-background">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <div class="navbar-brand" >PyBursa</div>
-        </div>
+{% block students_course %}{% url 'students:list_view' %}{{ course_par }}{% endblock %}
 
-        <!-- Collect the nav links, forms, and other content for toggling  -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav font-bold">
-            <li><a href="/">Main</a></li>
-            <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li><a href="{% url 'students:list_view' %}{{course_par}}">Students</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
 
+{% block title %}Welcome to Python{% endblock title %}
+
+
+{% block content %}
     <div class="container">
       <div class="jumbotron transparant-background">
-        <h2>{{course.name}}</h2>
-        <p>{{course.description}}</p>
+        <h2>{{ course.name }}</h2>
+        <p>{{ course.description|truncatechars:32 }}</p>
         <div class="panel panel-default transparant-background">
           <table class="table table-striped text-align-justify">
           <tr>
@@ -57,8 +24,8 @@
             </tr>
           {% for lesson in course_lessons %}
             <tr>
-            <td>{{forloop.counter}}</td>
-            <td>{{lesson}}</td><td>{{lesson.description}}</td>
+            <td>{{ forloop.counter }}</td>
+            <td>{{ lesson }}</td><td>{{ lesson.description }}</td>
             </tr>
           {% endfor %}
           </table>
@@ -73,8 +40,8 @@
             Course coach
           </div>
           <div class="panel-body">
-            <p><a href="{% url 'coaches:detail' course.coach.id %}">{{course.coach}}</a></p>
-            <p>{{course.coach.description}}</p>
+            <p><a href="{% url 'coaches:detail' course.coach.id %}">{{ course.coach }}</a></p>
+            <p>{{ course.coach.description }}</p>
           </div>
         </div>
         <div class="panel panel-primary transparant-background">
@@ -82,15 +49,9 @@
             Course assistant
         </div>
         <div class="panel-body">
-          <p><a href="{% url 'coaches:detail' course.assistant.id %}">{{course.assistant}}</a></p>
-          <p>{{course.assistant.description}}</p>
+          <p><a href="{% url 'coaches:detail' course.assistant.id %}">{{ course.assistant }}</a></p>
+          <p>{{ course.assistant.description }}</p>
         </div>
       <!--</div>-->
     </div>
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="{% static 'js/bootstrap.min.js'%}"></script>
-  </body>
-</html>
+{% endblock content %}
