--- a/templates/index.html
+++ b/templates/index.html
@@ -1,50 +1,17 @@
+{% extends "base.html" %}
+
+
 {% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Welcome to Python</title>
 
-    <!-- Bootstrap -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css'%}" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body class = "set-background-image">
-    <nav class="navbar navbar-default transparant-background">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <div class="navbar-brand" >PyBursa</div>
-        </div>
+{% block title %}Welcome to Python{% endblock title %}
 
-        <!-- Collect the nav links, forms, and other content for toggling  -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav font-bold">
-            <li><a href="/">Main</a></li>
-            <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li><a href="{% url 'students:list_view' %}">Students</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
 
-    <div class="page-header text-align-center">
+{% block nav_active_index %}active{% endblock %}
+
+
+{% block content %}
+    <!--<div class="page-header text-align-center">
       <div class="container">
         <div class="jumbotron transparant-background font-small-caps">
           <h2 class = "text-align-center">PyBursa - professional course of Python</h2>
@@ -79,7 +46,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div>-->
 
       <div class="container">
         <div class="jumbotron transparant-background">
@@ -92,17 +59,11 @@
               </tr>
               {% for course in courses_all %}
                 <tr>
-                <td><a href="{% url 'courses:detail' course.id %}">{{course}}</a></td><td>{{course.short_description}}</td>
+                <td><a href="{% url 'courses:detail' course.id %}">{{ course|upper }}</a></td><td>{{ course.short_description|title }}</td>
                 </tr>
               {% endfor %}
             </table>
           </div>
         </div>
       </div>
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="{% static 'js/bootstrap.min.js'%}"></script>
-  </body>
-</html>
+{% endblock content %}
