--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -1,32 +1,6 @@
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>PyStudent</title>
-    {% load staticfiles %}
-    
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-   
-    <link rel="shortcut icon" href="{% static 'images/python.ico' %}" type="image/x-icon">
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-  </head>
-  <body>
-  <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li><a href="{% url 'index' %}">Main</a></li>
-          <li><a href="{% url 'contact' %}">Contacts</a></li>
-          <li><a href="{% url 'student_list' %}">Students</a></li>
-          </li>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-  </nav>
+{% extends "base.html" %}
+{% block title %}PyStudent{% endblock title %}
+{% block content %}
   <div class="jumbotron">
     <div class="container">
       <h3>Mykhailov Stanislav</h3>
@@ -123,7 +97,4 @@
       </tbody>
     </table>
   </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  </body>
-</html>
+{% endblock content %}
