--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -1,32 +1,7 @@
+{% extends "base.html" %}
+{% block title %}PyStudents{% endblock title %}
+{% block content %}
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-   
-    <title>PyStudents</title>
-    {% load staticfiles %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    
-    <link rel="shortcut icon" href="{% static 'images/python.ico' %}" type="image/x-icon">
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    
-  </head>
-  <body>
-  <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li><a href="{% url 'index' %}">Main</a></li>
-          <li><a href="{% url 'contact' %}">Contacts</a></li>
-          <li class="active"><a href="{% url 'student_list' %}">Students</a></li>
-          </li>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-  </nav>
   <div class="jumbotron">
     <div class="container">
       <h1>Cтуденты PyBursa текущего набора</h1>
@@ -87,7 +62,4 @@
   </table>
   <div class="well well-lg">Всего выпускников в этом году: 46.</div>
   <div class="alert alert-info">Будь среди лучших!</div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  </body>
-</html>
+{% endblock content %}
