--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -12,14 +12,14 @@
 				<h3>Квадратное уравнеие: a*x*x + b*x + c = 0</h3>
 				<form method="GET">
 					{{ form.as_p }}
-					<input type="submit" value="Решить" />
+					<input type="submit" value="Решить"/>
 				</form>
 				{% if dic.d or dic.d == 0 %}
 					{% if dic.d > 0 %}
 						<h3>Дискриминант: {{ dic.d }}</h3>
 						<p>Квадратное уравнение имеет два действительных корня: x1 = {{ dic.x }}, x2 = {{ dic.y }}</p>
 					{% elif dic.d == 0 %}
-						<h3>Дискриминант: 0</h3>
+						<h3>Дискриминант: {{ dic.d }}</h3>
 						<p>Дискриминант равен нулю, квадратное уравнение имеет один действительный корень: x1 = x2 = {{ dic.x }}</p>
 					{% elif 0 > dic.d %}
 						<h3>Дискриминант: {{ dic.d }}</h3>
