--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -12,6 +12,18 @@
 
 {% block content %}
 
+{% if messages %}
+<div class="container" id="sto">
+<div class="alert alert-success" role="alert">
+    {% for message in messages %}
+    {{ message }}
+    {% endfor %}
+</div>
+</div>
+{% endif %}
+<div class="container" id="sto">
+<a class="btn btn-primary btn-lg" href="{% url 'students:add' %}" role="button"> + Добавить нового студента</a></p>
+</div>
 {% include "include/inc_BestoftheBest_include.html" %}
 <div class="container" id="sto">
         <h1><strong>Список студентов</strong></h1>
@@ -33,6 +45,10 @@
             <td>
                 курсы
             </td>
+            <td>
+            </td>
+            <td>
+            </td>
         </tr>
         {% for student in students %}
         <tr>
@@ -52,6 +68,14 @@
             	{% for course in student.courses.all %}
 				<a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a></br>
 				{% endfor %}
+            </td>
+            <td>
+            	<p><a class="btn btn-primary btn-lg" href="{% url 'students:edit' student.id %}" role="button"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Изменить</a></p>
+            </td>
+            <td>
+            	<p><a href="{% url 'students:remove' student.id %}" class="btn btn-info btn-lg">
+         <span class="glyphicon glyphicon-ok"></span> Удалить 
+        </a></p>
             </td>            
         </tr>
         {% endfor %}
