--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -9,16 +9,33 @@
 
 {% block content %}
     <h2> Student's list: </h2>
-    <br>
+      <br>
+        {% if messages %}
+        <div class="alert alert-success alert-dismissible" role="alert">
+            <ul class="messages">
+            {% for message in messages %}
+                  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                 {{ message }}
+             {% endfor %}
+            </ul>
+        </div>        
+        {% endif %} 
+      <br>  
+      <a href="{% url 'students:create' %}">
+      <button type="button" class="btn btn-default">
+          <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add student </button>    
+      </a>  
+      <br><br>
       <div class="table-responsive">
         <table class="table table-hover table-bordered">
             <thead>
-              <tr class="success">
+              <tr class="success" align="center">
                 <td><strong>ID</strong></td>
                 <td><strong>Full name</strong></td>
                 <td><strong>Address</strong></td>
                 <td><strong>Skype</strong></td>
                 <td><strong>Assigned courses</strong></td>  
+                <td><strong>Options</strong></td>  
               </tr>
             </thead>
             <tbody>
@@ -33,7 +50,17 @@
                    {% for course in student.courses.all %}
                         <a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a><br>
                    {% endfor %}
-                </td>               
+                </td>              
+                <td>
+                <a href="{% url 'students:edit' student.id %}">
+                    <button type="button" class="btn btn-default">
+                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit </button>    
+                </a>  
+                <a href="{% url 'students:remove' student.id %}">
+                    <button type="button" class="btn btn-default">
+                    <span class="glyphicon glyphicon-minus" aria-hidden="true"></span> Delete </button>    
+                </a>  
+                </td> 
               </tr>
               {% endfor %}
               {% endif %}  
