--- a/quadratic/templates/results.html
+++ b/quadratic/templates/results.html
@@ -1,96 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Quadratic</title>
-	{% load staticfiles %}
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Quadratic</title>
+  {% load staticfiles %}
+  <link href={% static 'css/bootstrap.css' %} rel="stylesheet">
+  <link href={% static 'css/style.css' %} rel="stylesheet">
+  <script src={% static 'js/jquery.min.js' %}></script>
+  <script src={% static 'js/bootstrap.min.js' %}></script>
+</head>
+<body>
+  <form method="get">
+    {{ form.as_p }}
+    <input type="submit" value="Calculate">
+  </form>
+  <p>{{ D }}<br>{{ result }}</p>
 
-    <link href="{%static 'css/bootstrap.css'%}" rel="stylesheet">
-    <link href="{%static 'css/style.css'%}" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	  
-    <![endif]-->
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="{%static 'js/jquery.min.js'%}"></script>
-    <script src="{%static 'js/bootstrap.min.js'%}"></script>
-  </head>
-  <body>
-	<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="{% url 'student_list'%}">Brand</a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><a href="{% url 'index'%}">Main</a></li>
-        <li> <a href="{% url 'contact'%}">Contacts</a></li>
-		<li><a href="{% url 'student_list'%}">Students</a></li>
-        <li class="dropdown">
-          <a href="{% url 'student_list'%}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="{% url 'student_list'%}">Action</a></li>
-            <li><a href="{% url 'student_list'%}">Another action</a></li>
-            <li><a href="{% url 'student_list'%}">Something else here</a></li>
-            
-            <li><a href="{% url 'student_list'%}">Separated link</a></li>
-            
-            <li><a href="{% url 'student_list'%}">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="{% url 'student_list'%}">Link</a></li>
-        <li class="dropdown">
-          <a href="{% url 'student_list'%}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="{% url 'student_list'%}">Action</a></li>
-            <li><a href="{% url 'student_list'%}">Another action</a></li>
-            <li><a href="{% url 'student_list'%}">Something else here</a></li>
-            
-            <li><a href="{% url 'student_list'%}">Separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-<div>
-	<h1>Квадратное уравнение a*x*x + b*x + c = 0 </h1>
-	
-    <p>a = {{a}}</p>
-	<p>{{a_error}}</p>
-	<p>b = {{b}}</p>
-	<p>{{b_error}}</p>
-	<p>c = {{c}}</p>
-	<p>{{c_error}}</p>
-	
-	<p>{{d}}</p>
-	<p>{{d_error}}</p>
-	
-	
-	
-</div>
-  </body>
+</body>
 </html>
